Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.4
-
None
-
-
8756a20821305eabb6026400e6d3cdc79df1690d (qt/qtmultimedia/5.12)
Description
Qt 5.12.4 fails to compile with old gstreamer 0.10
qgstreamerplayersession.cpp: In member function 'bool QGstreamerPlayerSession::play()': qgstreamerplayersession.cpp:986:126: error: 'gst_debug_bin_to_dot_file_with_ts' was not declared in this scope gst_debug_bin_to_dot_file_with_ts(GST_BIN(m_pipeline), GstDebugGraphDetails(GST_DEBUG_GRAPH_SHOW_ALL), "session.play");
Attachments
Issue Links
- relates to
-
QTQAINFRA-3075 Create CI and RTA for gstreamer 0.10
- Closed