GStreamer: Fix 0.10 compile error

Fixes: QTBUG-76816
Change-Id: I2909c2f2df91ac26b5104e24892310aa62cad172
Reviewed-by: Christian Strømme <christian.stromme@qt.io>